--- a/src/main/resources/properties/hibernate.properties
+++ b/src/main/resources/properties/hibernate.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/db_user?autoReconnect=true&useSSL=false
 jdbc.username=root
-jdbc.password=pepsimax
+jdbc.password=password
