--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,22 @@
 
 	<dependencies>
 
+		<!-- FasterXML Jackson Core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.7.4</version>
+		</dependency>
+
+		<!-- Fasterxml Jackson Core - Jackson Databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.7.4</version>
+		</dependency>
+
+
+
 		<!-- Unit Test -->
 		<dependency>
 			<groupId>junit</groupId>
