Generics that actually works, autowiring. yaaay

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
 
 	<dependencies>
 
+		<!-- http://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jdbc -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jdbc</artifactId>
+			<version>8.5.2</version>
+		</dependency>
+
+
 		<!-- FasterXML Jackson Core -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -64,6 +72,12 @@
 					<artifactId>commons-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
@@ -121,7 +135,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>5.1.0.Final</version>
+			<version>4.3.11.Final</version>
 		</dependency>
 
 
