--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,34 @@
 	<name>TicTatorUser Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
+	<profiles>
+		<profile>
+			<id>default</id>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>test</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<delete
+											file="${project.build.outputDirectory}/properties/hibernate.properties.model" />
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+	</profiles>
+
 
 	<!-- PROPERTIES -->
 	<properties>
